	  (CVE-2014-NNNN)
	* Better handling of HTTP proxy responses with negative Content-Lengths.
	  (Discovered by Matt Jones, Volvent)
	* Fix handling of SSL certificates without subjects when using libnss.
	* Fix handling of SSL certificates with timestamps in the distant future
	  when using libnss. (#15586)
	* Impose maximum download size for all HTTP fetches.

	Pidgin:
	* Better handling of URLs longer than 1000 letters.
	* Fix handling of multibyte UTF-8 characters in smiley themes. (#15756)

	Windows-Specific Changes:
	* When clicking file:// links, show the file in Explorer rather than
	  attempting to run the file. This reduces the chances of a user
	  clicking on a link and mistakenly running a malicious file.
	  (Originally discovered by James Burton, Insomnia Security. Rediscovered
	  by Yves Younan of Sourcefire VRT.) (CVE-NNNN-NNNN)
	* Fix Tcl scripts. (#15520)
	* Fix crash-on-startup when ASLR is always on. (#15521)
	* Updates to dependencies:
		* NSS 3.15.4 and NSPR 4.10.2

	AIM:
	* Fix untrusted certificate error.

	AIM and ICQ:
	* Fix a possible crash when receiving a malformed message in a Direct IM
	  session.

	Gadu-Gadu:
	* Fix buffer overflow with remote code execution potential. Only
	  triggerable by a Gadu-Gadu server or a man-in-the-middle.
	  (Discovered by Yves Younan and Ryan Pentney of Sourcefire VRT)
	  (CVE-2014-NNNN)
	* Disabled buddy list import/export from/to server (it didn't work
	  anymore). Buddy list synchronization will be implemented in 3.0.0.

	IRC:
	* Fix bug where initial IRC status would not be set correctly.
	* Fix bug where IRC wasn't available when libpurple was compiled with
	  Cyrus SASL support. (#15517)

	MSN:
	* Fix NULL pointer dereference parsing headers in MSN.
	  (Discovered by Fabian Yamaguchi and Christian Wressnegger of the
	  University of Goettingen) (CVE-2014-NNNN)
	* Fix NULL pointer dereference parsing OIM data in MSN.
	  (Discovered by Fabian Yamaguchi and Christian Wressnegger of the